# followme

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
followme/: __init__.py  cli.py  core.py
